feat(comparison,invoice,shared): electricity price comparison — TOU tariff extraction and pluggable embedding provider
  - Add comparison/ bounded context: CompareInvoiceUseCase, ElectricityComparisonResult aggregate,
    AlternativeRate/ElectricityAlternativeRate value objects, MarketOfferQueryPort and
    MarketOfferQueryAdapter reading from electricity_rates; ComparisonResponseDTO embedded in upload response
  - Wire CompareInvoiceUseCase into InvoiceController.upload(): comparison runs immediately after ingestion
    and is included in the 201 response payload; silently skipped when field extraction produced no data
  - Promote InvoiceType and InvoiceFields sealed hierarchy (ElectricityFields, GasFields, WaterFields,
    TelecomFields, MobileLine, StreamingService) from invoice/domain/model to _shared/domain/model so
    comparison/ can consume them without cross-bounded-context coupling
  - Extend ElectricityFields with pricePerKwhP1/P2/P3 for 2.0TD time-of-use tariffs; update
    LlmInvoiceFieldExtractor ELECTRICITY_INSTRUCTIONS with TOU extraction rules, flat vs. TOU
    disambiguation and a second few-shot example (Endesa 2.0TD)
  - Split EmbeddingModel into three @ConditionalOnProperty configs under _shared/infrastructure/config/embedding/:
    AllMiniLmEmbeddingModelConfig (default, local ONNX), OllamaEmbeddingModelConfig and
    OpenAiEmbeddingModelConfig; remove hardcoded bean from LangChain4jConfig
  - Extend StartupReadinessChecker: checkEmbeddingProvider() validates provider config, probes live
    model dimension and cross-checks pg_attribute column width; checkOllamaModelAvailable() generalised
    to handle both chat and embedding models; CREATE EXTENSION unaccent added to pgVector startup check
  - Add JpaKnowledgeRepository.verifyEmbeddingStored() post-write assertion and rebuildIndex() for
    IVFFlat index lifecycle (skipped below 100 rows, lists=sqrt(rows)); clear() now calls embeddingStore.removeAll()
  - Add consumer FAQ document to Knowledg